force-app/main/default/objects/Employee__c/fields/Current_Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>Current_Shift_Start__c</fullName>
    <description>Clock-in timestamp for the currently open time entry.</description>
    <label>Current Shift Start</label>
    <type>DateTime</type>
</CustomField>