force-app/main/default/objects/Employee__c/fields/Currently_Clocked_In__c.field-meta.xml
<CustomField>
    <fullName>Currently_Clocked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true by the Rippling sync when the latest time entry has no clock out.</description>
    <label>Currently Clocked In</label>
    <type>Checkbox</type>
</CustomField>