force-app/main/default/objects/Employee__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charlotte</fullName>
                <default>true</default>
                <label>Charlotte</label>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Triad</fullName>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>