force-app/main/default/objects/Employee__c/fields/Driver_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Expiry__c</fullName>
    <description>Expiration date of the employee driver license.</description>
    <label>Driver License Expiry</label>
    <type>Date</type>
</CustomField>