force-app/main/default/objects/Employee__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Date the employee was hired.</description>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>