force-app/main/default/objects/Employee__c/fields/Is_Driver__c.field-meta.xml
<CustomField>
    <fullName>Is_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the employee is authorized to drive a company vehicle.</description>
    <label>Is Driver</label>
    <type>Checkbox</type>
</CustomField>