force-app/main/default/objects/Employee__c/fields/Last_Rippling_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Rippling_Sync__c</fullName>
    <description>Timestamp of the most recent successful Rippling sync for this record.</description>
    <label>Last Rippling Sync</label>
    <type>DateTime</type>
</CustomField>