force-app/main/default/objects/Employee__c/fields/On_PTO_Today__c.field-meta.xml
<CustomField>
    <fullName>On_PTO_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true by the Rippling sync when today falls within an approved time-off window.</description>
    <label>On PTO Today</label>
    <type>Checkbox</type>
</CustomField>