force-app/main/default/objects/Employee__c/fields/Rippling_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Employee_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rippling Employee ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>