force-app/main/default/objects/Employee__c/fields/Rippling_Id__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Id__c</fullName>
    <description>Unique identifier from Rippling for this employee.</description>
    <externalId>true</externalId>
    <label>Rippling Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>