force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Operational role such as Foreman, Crew Member, Designer.</description>
    <label>Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>