force-app/main/default/objects/Employee__c/fields/Scheduled_Hours_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hours_This_Week__c</fullName>
    <label>Scheduled Hours This Week</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>