force-app/main/default/objects/Employee__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Date the employee was terminated, if applicable.</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>