force-app/main/default/objects/Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Salesforce User record, matched by email.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Records</relationshipLabel>
    <relationshipName>Employee_Records</relationshipName>
    <type>Lookup</type>
</CustomField>