force-app/main/default/objects/Employee__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <description>Work email address from Rippling.</description>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>